# prompteval

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: competitor-scan.md
examples/github-actions/: README.md  prompteval.yml
src/prompteval/: __init__.py  cli.py  version.py
src/prompteval/compare/: __init__.py  core.py  gates.py
src/prompteval/cost/: __init__.py  compute.py  models.py  pricing.yaml
src/prompteval/eval/: __init__.py  judge.py  persistence.py  runner.py  scorer.py  stock.py
src/prompteval/init/: __init__.py  bootstrap.py
src/prompteval/init/templates/: __init__.py  dataset.jsonl  env.example  eval.py
src/prompteval/init/templates/prompts/: v1.txt  v2.txt
tests/: test_cli_compare.py  test_cli_models.py  test_cli_run.py  test_cli_scorer.py  test_compare.py  test_compare_gates.py  test_compare_html.py  test_cost_compute.py  test_cost_models.py  test_init.py  test_judge.py  test_persistence.py  test_runner.py  test_scorer.py  test_stock.py  test_version.py
